@@ -1,199 +1,75 @@
 ROOM 1
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT TEXTURE FLOOR textures/quake1/red_tile_floor
    WALL
-     1 20  18 20
-     18 20  18 12
-     18 12  1 12
-     1 12  1 20
-   DOOR 18 16 18 15 STATUS OPEN LEADS TO 2
-   DOOR 5 12 4 12 STATUS OPEN LEADS TO 3
-   LIGHT AT 5 19 ON MID
-   LIGHT AT 9 19 ON MID
-   LIGHT AT 13 19 ON MID
-   LIGHT AT 17 19 ON MID
-   LIGHT AT 17 17 ON FLOOR
-   LIGHT AT 17 16 ON FLOOR
-   LIGHT AT 17 15 ON FLOOR
-   LIGHT AT 16 13 ON MID
-   LIGHT AT 12 13 ON MID
-   LIGHT AT 8 13 ON MID
-   LIGHT AT 6 13 ON FLOOR
-   LIGHT AT 5 13 ON FLOOR
-   LIGHT AT 4 13 ON FLOOR
-   LIGHT AT 2 14 ON MID
-   LIGHT AT 2 18 ON MID
-   INSIDE AT 4 18
-END
-
-ROOM 2
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT TEXTURE FLOOR textures/quake1/blue_tile_floor
-   WALL
-     18 20  34 20
-     34 20  34 12
-     34 12  18 12
-     18 12  18 20
-   DOOR 32 12 31 12 STATUS OPEN LEADS TO 7
-   DOOR 18 15 18 16 STATUS OPEN LEADS TO 1
-   LIGHT AT 22 19 ON MID
-   LIGHT AT 26 19 ON MID
-   LIGHT AT 30 19 ON MID
-   LIGHT AT 33 18 ON MID
-   LIGHT AT 33 14 ON MID
-   LIGHT AT 33 13 ON FLOOR
-   LIGHT AT 32 13 ON FLOOR
-   LIGHT AT 31 13 ON FLOOR
-   LIGHT AT 27 13 ON MID
-   LIGHT AT 23 13 ON MID
-   LIGHT AT 19 13 ON MID
-   LIGHT AT 19 14 ON FLOOR
-   LIGHT AT 19 15 ON FLOOR
-   LIGHT AT 19 16 ON FLOOR
-   INSIDE AT 21 18
-END
-
-ROOM 3
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT TEXTURE FLOOR textures/quake1/green_tile_floor
-   WALL
-     1 12  8 12
-     8 12  8 7
-     8 7  1 7
-     1 7  1 12
-   DOOR 4 12 5 12 STATUS OPEN LEADS TO 1
-   DOOR 8 10 8 9 STATUS OPEN LEADS TO 4
-   LIGHT AT 3 11 ON FLOOR
-   LIGHT AT 4 11 ON FLOOR
-   LIGHT AT 5 11 ON FLOOR
-   LIGHT AT 7 11 ON FLOOR
-   LIGHT AT 7 10 ON FLOOR
-   LIGHT AT 7 9 ON FLOOR
-   LIGHT AT 6 8 ON MID
-   LIGHT AT 2 8 ON MID
-   INSIDE AT 4 10
-END
-
-ROOM 4
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT TEXTURE FLOOR textures/quake1/purple_tile_floor
-   WALL
-     8 12  15 12
-     15 12  15 7
-     15 7  8 7
-     8 7  8 12
-   DOOR 15 10 15 9 STATUS OPEN LEADS TO 5
-   DOOR 8 9 8 10 STATUS OPEN LEADS TO 3
-   LIGHT AT 12 11 ON MID
-   LIGHT AT 14 11 ON FLOOR
-   LIGHT AT 14 10 ON FLOOR
-   LIGHT AT 14 9 ON FLOOR
-   LIGHT AT 12 8 ON MID
-   LIGHT AT 9 8 ON FLOOR
-   LIGHT AT 9 9 ON FLOOR
-   LIGHT AT 9 10 ON FLOOR
-   INSIDE AT 12 10
-END
-
-ROOM 5
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT TEXTURE FLOOR textures/quake1/black_tile_floor
-   WALL
-     15 12  21 12
-     21 12  21 7
-     21 7  15 7
-     15 7  15 12
-   DOOR 21 10 21 9 STATUS OPEN LEADS TO 6
-   DOOR 15 9 15 10 STATUS OPEN LEADS TO 4
-   LIGHT AT 19 11 ON MID
-   LIGHT AT 20 11 ON FLOOR
-   LIGHT AT 20 10 ON FLOOR
-   LIGHT AT 20 9 ON FLOOR
-   LIGHT AT 17 8 ON MID
-   LIGHT AT 16 8 ON FLOOR
-   LIGHT AT 16 9 ON FLOOR
-   LIGHT AT 16 10 ON FLOOR
-   SPAWN PLAYER AT 18 9
-   INSIDE AT 18 10
-END
-
-ROOM 6
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT TEXTURE FLOOR textures/quake1/slate_tile_floor
-   WALL
-     21 12  27 12
-     27 12  27 7
-     27 7  21 7
-     21 7  21 12
-   DOOR 27 10 27 9 STATUS OPEN LEADS TO 7
-   DOOR 21 9 21 10 STATUS OPEN LEADS TO 5
-   MONSTER python_doommarine_mp AT 25 9
-   LIGHT AT 25 11 ON MID
-   LIGHT AT 26 11 ON FLOOR
-   LIGHT AT 26 10 ON FLOOR
-   LIGHT AT 26 9 ON FLOOR
-   LIGHT AT 23 8 ON MID
-   LIGHT AT 22 8 ON FLOOR
+     1 25  43 25
+     43 25  43 1
+     43 1  1 1
+     1 1  1 25
+   MONSTER python_doommarine_mp AT 32 5
+   AMMO item_medkit AMOUNT 1 AT 11 22
+   AMMO ammo_shells_large AMOUNT 32 AT 22 22
+   AMMO item_medkit AMOUNT 1 AT 32 22
+   AMMO weapon_shotgun_double AMOUNT 1 AT 11 14
+   AMMO ammo_rockets_large AMOUNT 32 AT 22 14
+   AMMO item_medkit AMOUNT 1 AT 32 14
+   AMMO item_medkit AMOUNT 1 AT 11 5
+   AMMO moveable_item_rocketlauncher AMOUNT 1 AT 22 5
+   LIGHT AT 6 24 ON FLOOR
+   LIGHT AT 10 24 ON FLOOR
+   LIGHT AT 14 24 ON FLOOR
+   LIGHT AT 18 24 ON FLOOR
+   LIGHT AT 22 24 ON FLOOR
+   LIGHT AT 26 24 ON FLOOR
+   LIGHT AT 30 24 ON FLOOR
+   LIGHT AT 34 24 ON FLOOR
+   LIGHT AT 38 24 ON FLOOR
+   LIGHT AT 42 24 ON FLOOR
+   LIGHT AT 2 23 ON FLOOR
+   LIGHT AT 11 22 ON FLOOR
+   LIGHT AT 17 22 ON FLOOR
+   LIGHT AT 28 22 ON FLOOR
+   LIGHT AT 32 22 ON FLOOR
+   LIGHT AT 42 21 ON FLOOR
+   LIGHT AT 2 20 ON FLOOR
+   LIGHT AT 11 18 ON FLOOR
+   LIGHT AT 22 18 ON FLOOR
+   LIGHT AT 32 18 ON FLOOR
+   LIGHT AT 42 18 ON FLOOR
+   LIGHT AT 2 17 ON FLOOR
+   LIGHT AT 42 15 ON FLOOR
+   LIGHT AT 2 14 ON FLOOR
+   LIGHT AT 17 14 ON FLOOR
+   LIGHT AT 27 14 ON FLOOR
+   LIGHT AT 32 14 ON FLOOR
+   LIGHT AT 42 12 ON FLOOR
+   LIGHT AT 2 11 ON FLOOR
+   LIGHT AT 11 9 ON FLOOR
    LIGHT AT 22 9 ON FLOOR
-   LIGHT AT 22 10 ON FLOOR
-   INSIDE AT 25 10
-END
-
-ROOM 7
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   DEFAULT TEXTURE FLOOR textures/quake1/slate_aqua_floor
-   WALL
-     27 12  33 12
-     33 12  33 7
-     33 7  27 7
-     27 7  27 12
-   DOOR 31 12 32 12 STATUS OPEN LEADS TO 2
-   DOOR 30 7 29 7 STATUS OPEN LEADS TO 8
-   DOOR 27 9 27 10 STATUS OPEN LEADS TO 6
-   LIGHT AT 30 11 ON FLOOR
-   LIGHT AT 31 11 ON FLOOR
-   LIGHT AT 32 11 ON FLOOR
-   LIGHT AT 32 9 ON MID
-   LIGHT AT 31 8 ON FLOOR
-   LIGHT AT 30 8 ON FLOOR
-   LIGHT AT 29 8 ON FLOOR
-   LIGHT AT 28 8 ON FLOOR
-   LIGHT AT 28 9 ON FLOOR
-   LIGHT AT 28 10 ON FLOOR
-   INSIDE AT 31 9
-END
-
-ROOM 8
-   DEFAULT COLOUR MID 190 180 170
-   DEFAULT COLOUR CEILING 170 107 7
-   DEFAULT COLOUR FLOOR 170 107 7
-   WALL
-     27 7  33 7
-     33 7  33 1
-     33 1  27 1
-     27 1  27 7
-   DOOR 29 7 30 7 STATUS OPEN LEADS TO 7
-   LIGHT AT 28 6 ON FLOOR
-   LIGHT AT 29 6 ON FLOOR
-   LIGHT AT 30 6 ON FLOOR
-   LIGHT AT 32 4 ON MID
-   LIGHT AT 30 2 ON MID
-   LIGHT AT 28 4 ON MID
-   INSIDE AT 31 4
+   LIGHT AT 32 9 ON FLOOR
+   LIGHT AT 42 9 ON FLOOR
+   LIGHT AT 2 8 ON FLOOR
+   LIGHT AT 42 6 ON FLOOR
+   LIGHT AT 2 5 ON FLOOR
+   LIGHT AT 11 5 ON FLOOR
+   LIGHT AT 16 5 ON FLOOR
+   LIGHT AT 27 5 ON FLOOR
+   LIGHT AT 42 3 ON FLOOR
+   LIGHT AT 2 2 ON FLOOR
+   LIGHT AT 6 2 ON FLOOR
+   LIGHT AT 10 2 ON FLOOR
+   LIGHT AT 14 2 ON FLOOR
+   LIGHT AT 18 2 ON FLOOR
+   LIGHT AT 22 2 ON FLOOR
+   LIGHT AT 26 2 ON FLOOR
+   LIGHT AT 30 2 ON FLOOR
+   LIGHT AT 34 2 ON FLOOR
+   LIGHT AT 38 2 ON FLOOR
+   LIGHT AT 42 2 ON FLOOR
+   SPAWN PLAYER AT 7 22
+   INSIDE AT 4 23
+   LABEL AT 11 22 the_ammo_loc_0
+   LABEL AT 32 22 the_ammo_loc_2
+   LABEL AT 32 14 the_ammo_loc_3
+   LABEL AT 11 5 the_ammo_loc_1
 END
 
 END.
