@@ -1,3 +1,8 @@
+2020-12-17      Gaius Mulley <gaiusmod2@gmail.com>
+
+	* python/txt2pen.py:  improved many of the parameter
+	names for clarity.
+
 2020-09-21      Gaius Mulley <gaiusmod2@gmail.com>
 
 	* tidied up comments.
